--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     
- <h1>Hii</h1>
+<h3>0</h3>
+<button id="inc">Increment</button>
+<button id="dec">Decrement</button>
 
 
     <script src="script.js"></script>
